# worldengine-data-collector

./: .gitignore
.github/workflows/: build-release.yml
adapters/cyberpunk/WorldEngineCollector/: init.lua  metadata.json
adapters/skyrim/: CMakeLists.txt
adapters/skyrim/src/: CoordUtils.h  FrameCollector.cpp  FrameCollector.h  Plugin.cpp  TCPWriter.cpp  TCPWriter.h
adapters/unity/WorldEngineCollector/: WorldEngineCollector.csproj
adapters/unity/WorldEngineCollector/src/: FrameCollector.cs  PipeWriter.cs  Plugin.cs  SharedMemReader.cs  UIHider.cs
adapters/unity/WorldEngineCollector/src/Models/: CoordUtils.cs  FrameData.cs
adapters/unity/WorldEngineCollector/tests/: CoordUtilsTests.cs
adapters/unity/stubs/: BepInEx.cs  BepInEx.csproj  UnityEngine.cs  UnityEngine.csproj
control_center/: _fix_win_ole.py  installer.py  main.py  metadata_collector.py  osd_bridge.py  pipe_reader.py  post_processor.py  pyproject.toml  session_manager.py
control_center/config/: settings.yaml
control_center/config/games/: cyberpunk2077.yaml  skyrim_se.yaml  valheim.yaml
control_center/gui/: game_setup_dialog.py  main_window.py  session_log.py  setup_wizard.py
control_center/tests/: test_installer.py  test_metadata_collector.py  test_pipe_reader.py  test_post_processor.py  test_session_manager.py
docs/superpowers/plans/: 2026-03-30-worldengine-phase1-valheim.md  2026-03-31-game-selector-ui.md
docs/superpowers/specs/: 2026-03-30-worldengine-data-collector-design.md  2026-03-31-cyberpunk-skyrim-adapters-design.md
dx_capture/: CMakeLists.txt
dx_capture/include/: dx_hook.h  encoder.h  osd.h  shared_mem.h  shared_protocol.h
dx_capture/src/: dllmain.cpp  dx_hook.cpp  encoder.cpp  osd.cpp  shared_mem.cpp
